assets 이동 처리 중.
잘 안됨 😑

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,21 @@ set(CMAKE_CXX_STANDARD 17)
 #find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
 find_package(SDL3 CONFIG REQUIRED)
 
-add_executable(tetris main.cpp)
+#add_executable(tetris main.cpp)
+add_executable(tetris image.cpp)
 
-configure_file(./sample.bmp ${PROJECT_BINARY_DIR}/sample.bmp COPYONLY)
-configure_file(./sample.wav ${PROJECT_BINARY_DIR}/sample.wav COPYONLY)
-configure_file(./sword.wav ${PROJECT_BINARY_DIR}/sword.wav COPYONLY)
+#file(
+#	GLOB RESOURCES 
+#	*.wav
+#	*.jpg
+#	*.bmp
+#)
+#file(COPY ${RESOURCES} DESTINATION ${PROJECT_BINARY_DIR})
+
+#configure_file(./sample.wav ${PROJECT_BINARY_DIR}/sample.wav COPYONLY)
+#configure_file(./sword.wav ${PROJECT_BINARY_DIR}/sword.wav COPYONLY)
+#configure_file(./gintoki.jpg ${PROJECT_BINARY_DIR}/gintoki.jpg COPYONLY)
+#configure_file(./kagura.bmp ${PROJECT_BINARY_DIR}/kagura.bmp COPYONLY)
+file(COPY ./assets DESTINATION ${CMAKE_BINARY_DIR}/assets)})
 
 target_link_libraries(tetris PRIVATE SDL3::SDL3)
