이미지 복수 출력 테스트 중
윈도우에선 우측(IMG_Load 함수) 이미지 출력 에러 발생함.
맥에서 확인 필요.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeLists.txt
+﻿# CMakeLists.txt
 cmake_minimum_required(VERSION 3.30)
 project(tetris)
 
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 #find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
 find_package(SDL3 CONFIG REQUIRED)
 find_package(SDL3_image CONFIG REQUIRED)
+#find_package(libjpeg-turbo CONFIG REQUIRED)
 
 #add_executable(tetris main.cpp)
 add_executable(tetris image.cpp)
@@ -24,6 +25,7 @@ add_executable(tetris image.cpp)
 #configure_file(./sword.wav ${PROJECT_BINARY_DIR}/sword.wav COPYONLY)
 #configure_file(./gintoki.jpg ${PROJECT_BINARY_DIR}/gintoki.jpg COPYONLY)
 #configure_file(./kagura.bmp ${PROJECT_BINARY_DIR}/kagura.bmp COPYONLY)
-file(COPY ./assets DESTINATION ${CMAKE_BINARY_DIR}/assets)
+file(COPY ./assets DESTINATION ${CMAKE_BINARY_DIR})
 
-target_link_libraries(tetris PRIVATE SDL3::SDL3 SDL3_image::SDL3_image)
+#target_link_libraries(tetris PRIVATE SDL3::SDL3 SDL3_image::SDL3_image libjpeg-turbo::turbojpeg)
+target_link_libraries(tetris PRIVATE SDL3::SDL3 $<IF:$<TARGET_EXISTS:SDL3_image::SDL3_image-shared>,SDL3_image::SDL3_image-shared,SDL3_image::SDL3_image-static>)
