--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿# CMakeLists.txt
 cmake_minimum_required(VERSION 3.30)
-project(tetris)
+project(sdl3-example)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -10,16 +10,20 @@ endif ()
 
 find_package(SDL3 CONFIG REQUIRED)
 find_package(SDL3_image CONFIG REQUIRED)
+find_package(SDL3_mixer CONFIG REQUIRED)
 
-#add_executable(tetris main.cpp)
-#add_executable(tetris image.cpp)
-add_executable(tetris sound.cpp)
+#add_executable(${PROJECT_NAME} src/main.cpp)
+#add_executable(${PROJECT_NAME} src/image.cpp)
+#add_executable(${PROJECT_NAME} src/load_wave.cpp)
+add_executable(${PROJECT_NAME} src/load_mp3.cpp)
 
 file(COPY ./assets DESTINATION ${CMAKE_BINARY_DIR})
 
-target_link_libraries(tetris
-    PRIVATE
-    SDL3::SDL3
-    PRIVATE
-    SDL3_image::SDL3_image
+target_link_libraries(${PROJECT_NAME}
+        PRIVATE
+        SDL3::SDL3
+        PRIVATE
+        SDL3_image::SDL3_image
+        PRIVATE
+        SDL3_mixer::SDL3_mixer
 )
